update starter files

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>My Web Page</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <meta charset="UTF-8">
+  <title>Basic Landing Page</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+  <!-- Navbar -->
+  <nav>
+    <ul>
+      <li><a href="#">Logo</a></li>
+      <li><a href="#">Home</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <img src="https://images.pexels.com/photos/3820509/pexels-photo-3820509.jpeg" width="100" height="100" alt="a gray rabbit"> </img>
+    <h1>Welcome to a Landing Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+    <button>Buy our stuff</button>
+  </section>
+
 </body>
 </html>
