--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <img src="https://images.pexels.com/photos/3820509/pexels-photo-3820509.jpeg" width="100" height="100" alt="a gray rabbit"> </img>
+    <img src="https://i.pinimg.com/736x/5d/88/1a/5d881af33b849ba7c987977e6287b6f8.jpg" width="100" height="100" alt="a warm beach"> </img>
     <h1>Welcome to a Landing Page</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
-    <button>Buy our stuff</button>
+    <button>Take a Vacation</button>
   </section>
 
 </body>
